--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "React-todomvc",
-  "version": "0.0.1",
-  "private": true,
-  "devDependencies": {
-    "react-scripts": "^0.6.0"
+  "name": "brahmos-todo-mvc",
+  "version": "0.1.0",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "NODE_ENV=production webpack && yarn build-page",
+    "build-page": "git subtree push --prefix public origin gh-pages"
   },
   "dependencies": {
+    "brahmos": "^0.2.1",
     "classnames": "^2.2.5",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
     "todomvc-app-css": "^2.0.6"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test"
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-brahmos": "^0.1.3",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "packagebind": "^0.2.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
