Use latest version of brahmos

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-page": "sh ./build.sh"
   },
   "dependencies": {
-    "brahmos": "^0.6.0",
+    "brahmos": "^0.9.0-alpha",
     "classnames": "^2.2.5",
     "todomvc-app-css": "^2.0.6"
   },
@@ -18,7 +18,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
-    "babel-plugin-brahmos": "^0.3.0",
+    "babel-plugin-brahmos": "git://github.com/s-yadav/babel-plugin-brahmos.git#0.5.0-alpha",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
