--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "NODE_ENV=production webpack",
-    "build-page": "sh ./build.sh"
+    "build-page": "sh ./build.sh",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "brahmos": "^0.9.0-alpha",
@@ -21,6 +23,7 @@
     "babel-plugin-brahmos": "git://github.com/s-yadav/babel-plugin-brahmos.git#0.5.0-alpha",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
+    "cypress": "^3.6.1",
     "html-webpack-plugin": "^3.2.0",
     "packagebind": "^0.2.1",
     "style-loader": "^0.23.1",
